--- a/css/style.css
+++ b/css/style.css
@@ -108,6 +108,46 @@ header{
     margin-right: 0;
     width: 0;
 }
+
+/*Intro*/
+.intro-container{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    margin-top: 5px;
+    align-items: center;
+  
+
+}
+
+.imagenIntro-container{
+    min-width: 300px;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+}
+
+.imagenIntro{
+    width: 90%;
+    height: auto;
+}
+
+.botonIntro{
+    border-radius: 30px;
+    padding: 20px;
+    background-color: black;
+    border: black;
+    font-size: 2px;
+    margin: 1rem;
+}
+
+.botonIntro a {
+    text-decoration: none;
+    color: white;  
+    font-size: 15px;
+}
+
+
 /* NOSOTROS */
 #nosotros {
     min-height: 100vh;
@@ -145,19 +185,9 @@ header{
     text-align: left;
 }
 
-.parrafo-intro button{
-    border-radius: 10px 10px 10px 10px;
-    padding: 10px;
-    border: black;
-    background-color: black;
-    margin: 1rem;
-}
 
-.parrafo-intro button a {
-    text-decoration: none;
-    color: white;  
-    font-size: 1.2rem;
-}
+
+
 
 #nosotros h2 {
     font-family: "Aileron Bold";
