corrección sección business

--- a/css/style.css
+++ b/css/style.css
@@ -349,6 +349,9 @@ header{
     flex-direction: row;
     justify-content: space-around;
     flex-wrap: wrap;
+    margin: 10px;
+    
+
 }
 
 .businessTvc  p {
