--- a/css/style.css
+++ b/css/style.css
@@ -142,8 +142,20 @@ header{
 .botonIntro a {
     text-decoration: none;
     color: white;  
-    font-size: 15px;
+    font-size: 1.2rem;
+    letter-spacing: 1.5px;
 }
+
+.botonIntro a:hover {
+    color: black;
+}
+
+.botonIntro:hover {
+    background-color: white;
+    color: black;
+    border-radius: 30px;
+}
+
 
 
 /* NOSOTROS */
@@ -177,7 +189,7 @@ header{
 }
 
 .parrafo-intro p {
-    font-size: 1.2rem;
+    font-size: 1.4rem;
     color: white;
     padding: 1.1rem;
     text-align: left;
@@ -189,7 +201,7 @@ header{
 
 #nosotros h2 {
     font-family: "Aileron Bold";
-    font-size: 2rem;
+    font-size: 3rem;
     color: white;
     text-align: left;
     display: block;
@@ -290,7 +302,7 @@ header{
 /* Clientes */
 #clientes h2 {
     font-family: "Aileron Bold";
-    font-size: 2rem;
+    font-size: 3rem;
     color: white;
     text-align: left;
     display: block;
@@ -302,7 +314,12 @@ header{
 }
 
 .clientes-txt{
-    margin: 30px;
+    
+    color: white;
+    font-size: 1.2rem;
+    margin-top: 1rem;
+    padding: 1.2rem;
+    letter-spacing: 1.5px;
 }
 
 .sliderMarcas{
@@ -333,7 +350,7 @@ header{
 
 #business h2 {
     font-family: "Aileron Bold";
-    font-size: 2rem;
+    font-size: 3rem;
     color: white;
     text-align: left;
     display: block;
@@ -355,11 +372,16 @@ header{
 }
 
 .businessTvc  p {
+    color: white;
     font-size: 1.2rem;
+    margin-top: 1rem;
+    padding: 1.2rem;
+    letter-spacing: 1.5px;
 }
 .businessImg{
     width: 500px;
     height: 250px;
+    padding-left: 1.2rem;
 }
 .businnesItem{
     display: flex;
@@ -417,7 +439,7 @@ header{
 
 #contacto h2 {
     font-family: "Aileron Bold";
-    font-size: 2rem;
+    font-size: 3rem;
     color: white;
     text-align: left;
     display: block;
@@ -438,7 +460,15 @@ header{
 }
 
 .contactoTitulo p {
+    color: white;
     font-size: 1.2rem;
+    margin-top: 1rem;
+    padding: 1.2rem;
+    letter-spacing: 1.5px;
+}
+
+form {
+    padding: 1.2rem;
 }
 
 form label {
@@ -448,7 +478,8 @@ form label {
 .contactoImg{
     width: 500px;
     height: auto;
-    padding-top: 40px;
+    padding-top: 0.6rem;
+    padding-left: 1.2rem;
 }
 
 .datosContacto {
@@ -543,16 +574,29 @@ form label {
         width: 300px;
     }
 
+    .parrafo-intro {
+        padding: 0px;
+    }
+    .parrafo-intro h3 {
+        font-size: 2.2rem;
+    }
+    .parrafo-intro p {
+        padding: 1.2rem;
+        font-size: 1rem;
+    }
+
+    #nosotros .nosotros-parrafo {
+        padding: 0px;
+        font-size: 1rem;
+    }
     .posicionamientoNosotros {
         display: flex;
         flex-direction: column;
         justify-content: center;
         align-items: center;
-        padding: 10px 40px;
+        padding: 1.2rem
     }
-    .posicionamientoNosotros .nosotros-parrafo {
-        padding: 1.1rem;
-    }
+   
 
     .bloque-Nosotros {
         display: flex;
@@ -566,7 +610,9 @@ form label {
         width: 90%;
     }
 
-    
+    .clientes-txt {
+        font-size: 1rem;
+    }
     
 
     .posicionamientoBusiness {
@@ -575,22 +621,45 @@ form label {
         justify-content: center;
         align-items: center;
         height: auto;
+        margin: 0px;
+    }
+
+    .bloqueBusiness {
+        padding: 1.2rem;    
     }
 
     .posicionamientoBusiness .businessImg {
         width: 100%;
+        padding: 1.2rem;
     }
 
+    .businessTvc p{
+        font-size: 1rem;
+    }
+
+    .businessDetalle h3 {
+        font-size: 1.6rem;
+    }
+
+    .businessDetalle p {
+        font-size: 1rem;
+    }
 
     .posicionamientoContacto {
         display: flex;
         flex-direction: column;
         justify-content: center;
         align-items: center;
+        padding: 0px;
     }
 
     .posicionamientoContacto .contactoImg {
         width: 100%;
+        padding: 1.2rem
+    }
+
+    .contactoTitulo p{
+        font-size: 1rem;
     }
 
     .footer {
